--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@wordpress/scripts": "^30.7.0",
-    "eslint": "^8.57.0",
-    "stylelint": "^16.12.0",
-    "stylelint-config-wordpress": "^17.0.0"
+    "@wordpress/eslint-plugin": "^21.4.0",
+    "@wordpress/scripts": "^30.4.0",
+    "@wordpress/stylelint-config": "^23.3.0",
+    "eslint": "^8.57.1",
+    "stylelint": "^16.10.0"
+  },
+  "dependencies": {
+    "@wordpress/components": "^25.13.0"
   }
 }
